tests/basic/EmptyProtocol.protocol
// :: error: (Expected at least one defined state)
typestate EmptyProtocol {

}
